Fix post issues with firefox and move post content length determination to component
Handling the height in CSS was a pain so just going to truncate the text in the component instead

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -3,7 +3,7 @@
 .post {
     border-radius: 8px;
     display: grid;
-    grid-template-columns: 1.25fr 3fr;
+    grid-template-columns: 2fr 3fr;
     grid-template-rows: 3rem minmax(0, 5fr) minmax(0, 1fr);
     column-gap: 1rem;
     row-gap: 1rem;
@@ -28,26 +28,23 @@
 }
 
 .post-content {
-    --line-height: 1.25em;
-    --num-lines: 4;
     grid-column: 1 / 3;
     grid-row:  3 / 4;
-    line-height: var(--line-height);
+    line-height: 1.35em;
+    height: 6em;
     width: 100%;
-    min-height: min-content;
-    max-height: calc(var(--line-height) * var(--num-lines));
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: var(--num-lines);
-    line-clamp: var(--num-lines);
     overflow: hidden;
+    text-align: justify;
 }
+
 
 .post img {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    height: 100%;
+    max-height: 100%;
+    height: auto;
     width: auto;
+    max-width: 100%;
     align-self: center;
     justify-self: center;
 }
